[gd_scene load_steps=2 format=1]

[ext_resource path="res://custom_color.gd" type="Script" id=1]

[node name="CustomColor" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 93.0
margin/right = 495.0
margin/bottom = 278.0
script/script = ExtResource( 1 )

[node name="RSlider" type="HSlider" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 57.0
margin/top = 42.0
margin/right = 198.0
margin/bottom = 58.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 5
ticks_on_borders = true
focus_mode = 2

[node name="GSlider" type="HSlider" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = 82.0
margin/right = 200.0
margin/bottom = 98.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 5
ticks_on_borders = true
focus_mode = 2

[node name="BSlider" type="HSlider" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 121.0
margin/right = 201.0
margin/bottom = 137.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 5
ticks_on_borders = true
focus_mode = 2

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 48.0
margin/right = 48.0
margin/bottom = 62.0
text = "Red"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 132.0
margin/right = 47.0
margin/bottom = 146.0
text = "Blue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 94.0
margin/right = 46.0
margin/bottom = 108.0
text = "Green"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RedValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 346.0
margin/top = 44.0
margin/right = 414.0
margin/bottom = 67.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GreenValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 347.0
margin/top = 90.0
margin/right = 387.0
margin/bottom = 104.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BlueValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 351.0
margin/top = 132.0
margin/right = 391.0
margin/bottom = 146.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


