[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/PickerOfColors/custom_color.gd" type="Script" id=1]
[ext_resource path="res://addons/PickerOfColors/VSuperSlider.tscn" type="PackedScene" id=2]

[node name="CustomColor" type="Control"]
margin_left = 1.0
margin_right = 201.0
margin_bottom = 200.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ValueSlider" parent="." instance=ExtResource( 2 )]
margin_left = 239.0
margin_top = 0.0
margin_right = 279.0
margin_bottom = 240.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="DebugColor" type="Label" parent="."]
margin_left = 309.0
margin_top = 100.0
margin_right = 352.0
margin_bottom = 131.0
rect_scale = Vector2( 3, 3 )
text = "Color
"

[connection signal="value_changed" from="ValueSlider" to="." method="_on_ValueSlider_value_changed"]
